# docs/command/swagger.json
@@ -1,47 +1,17 @@
-// Code generated by swaggo/swag. DO NOT EDIT.
-
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
+    "schemes": [
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "This is a transcoders API server.",
+        "title": "Transcoders API",
         "contact": {},
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "basePath": "/commandsvc",
     "paths": {
-        "/": {
-            "get": {
-                "description": "Health check API",
-                "consumes": [
-                    "*/*"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/transcoders": {
+        "/commands": {
             "get": {
                 "description": "Get all the transcoders",
                 "consumes": [
@@ -91,15 +61,6 @@ const docTemplate = `{
             "put": {
                 "description": "Update the transcoder",
                 "summary": "Update the transcoder",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "id",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Transcoder updated successfully.",
@@ -301,6 +262,56 @@ const docTemplate = `{
                     }
                 }
             }
+        },
+        "/healthz": {
+            "get": {
+                "description": "Health check API",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/readyz": {
+            "get": {
+                "description": "Readiness check API",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "503": {
+                        "description": "Service Unavailable",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -326,7 +337,24 @@ const docTemplate = `{
             "properties": {
                 "asset_type": {
                     "type": "string",
-                    "example": "media_analysis"
+                    "example": "Audio, Video, Image, Text"
+                },
+                "audio_count": {
+                    "description": "Audio extraction fields",
+                    "type": "integer",
+                    "example": 1
+                },
+                "channels_one_count": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "channels_six_count": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "channels_two_count": {
+                    "type": "integer",
+                    "example": 1
                 },
                 "created_at": {
                     "type": "string"
@@ -339,6 +367,11 @@ const docTemplate = `{
                     "description": "To be used as a primary key and mandatory field",
                     "type": "string"
                 },
+                "input_scan_type": {
+                    "description": "Video extraction fields",
+                    "type": "string",
+                    "example": "progressive"
+                },
                 "input_type": {
                     "type": "string",
                     "example": "mp4"
@@ -347,6 +380,10 @@ const docTemplate = `{
                     "description": "Operation String - required | examples - Media Analysis, Encoding, Packaging, Processing, Extraction, QC, Sticking, Spliting",
                     "type": "string",
                     "example": "media_analysis"
+                },
+                "output_scan_type": {
+                    "type": "string",
+                    "example": "interlaced"
                 },
                 "output_type": {
                     "description": "Types of input and output",
@@ -376,22 +413,4 @@ const docTemplate = `{
             }
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0",
-	Host:             "localhost:51000",
-	BasePath:         "/",
-	Schemes:          []string{"http"},
-	Title:            "Transcoders API",
-	Description:      "This is a transcoders API",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-	LeftDelim:        "{{",
-	RightDelim:       "}}",
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
