# handlers/deleteTranscoder.go
@@ -11,10 +11,7 @@ import (
 
 // DeleteTranscoder is a handler to delete a transcoder
 // @description Delete a transcoder
-// @host localhost:51000
-// @BasePath /
-// @Router /transcoders [delete]
-// @schemes http
+// @Router /commands [delete]
 // @Param Authorization header string true "JWT Token"
 // @Param input_type query string true "input_type" required=true
 // @Param output_type query string true "output_type" required=true
